ajuste para layout de las paginas